--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,6 +1,31 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import './base.css';
 
+//Светлая тема
+:root {
+    --primary-color: #F00;
+    --primary-hover: #EC0000;
+    --white-color: #fff;
+    --secondary-color: #282828;
+    --btn-secondary-color: rgba(0, 0, 0, 0.03);
+    --btn-secondary-outline-background: #F8F7F5;
+    --btn-secondary-outline-color: #4D4D4D;
+    --btn-secondary-outline-hover: #E9E9E9;
+    --border-color: #E2E2E2;
+    --main-background: #F5F5F5;
+    --main-background-windows: #fff;
+    --color-prev-hover: #EEE;
+    --link-color-hover: #8B8B8B;
+    --footer-text-color: #B0B0B0;
+    --rating-color: #E6E6E6;
+    --logo-desctop: url('../img/logo_alt.svg');
+    --logo-mobile: url('../img/min-logo.svg');
+    --color-sitebar-text: #595959;
+    --text-color-dop: #ACABAB;
+    --bs-breadcrumb-divider: "-";
+    --bs-body-font-family: "Roboto", sans-serif !important;
+  }
+
 *{
 	font-family: "Roboto", sans-serif !important;
     box-sizing: border-box;
@@ -704,16 +729,18 @@ hr {
 			
 
 			&::before{
-				content: "\e91a";
-				font-family: 'icomoon' !important;
-				color: transparent;
-				font-size: 24px;
-				position: absolute;
-				transform: translate(0, -50%);
-				top: 50%;
-				left: 12px;
-				pointer-events: none;
-				transition: all 0.4s;
+				content: "";
+                background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%238FFF00'%3E%3Cpath d='M9 18.17L3.83 13l-1.42 1.41L9 21 21.41 8.59 20 7.17z' stroke='%238FFF00' stroke-width='0.5'/%3E%3C/svg%3E");
+                background-repeat: no-repeat;
+                background-position: center;
+                width: 24px;
+                height: 24px;
+                position: absolute;
+                transform: translate(0, -50%);
+                top: 50%;
+                left: 12px;
+                pointer-events: none;
+                opacity: 0;
 			}
 		}
 
@@ -724,7 +751,7 @@ hr {
 
 			.dart-input-text{
 				&::before{
-
+                    opacity: 1;
 					color: #8FFF00;
 					pointer-events: all;
 				}
@@ -935,4 +962,203 @@ h3, .h3 {
         background-color: #282828;
         color: #FFF;
     } 
+}
+
+.dart-input-text input {
+    padding: 16px 12px;
+    border: 1px solid transparent;
+}
+
+.dart-input input {
+    outline: none;
+    border-radius: 5px;
+    background: #F8F7F5;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    color: #282828;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    width: 100%;
+}
+
+.mt-2{
+    margin-top: 8px;
+}
+
+.dart-input-text input:focus {
+    border: 1px solid #E2E2E2;
+}
+
+.dart-order__inputs-container {
+    overflow-y: auto;
+    margin-top: 20px;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    padding-bottom: 20px;
+    padding-right: 8px;
+}
+
+.error-message {
+    color: red;
+    font-size: 12px;
+    display: block;
+    margin-top: 4px;
+}
+
+.dart-order__list-border{
+	padding: 12px 0;
+    border-top: 1px solid #E2E2E2;
+    border-bottom: 1px solid #E2E2E2;
+}
+
+.dart-order__list-bonus{
+	gap: 3px;
+    display: flex;
+    border-radius: 19px;
+    background: #FFF;
+	box-shadow: 0px 0px 12px 0px rgb(51 51 51 / 22%);
+    padding: 2px 4px;
+}
+
+.dart-order__list b {
+    color: #282828;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.dart-cheackbox-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    color: #282828;
+    gap: 8px;
+}
+
+.dart-cheackbox {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.dart-cheackbox + label {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+.dart-cheackbox + label::before {
+    content: '';
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    -webkit-box-flex: 0;
+    -ms-flex-positive: 0;
+    flex-grow: 0;
+    border: 1px solid #adb5bd;
+    border-radius: 2px;
+    margin-right: 0.5em;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
+}
+
+.dart-btn-secondary-mini {
+    font-size: 14px;
+    padding: 8px 16px;
+    background: #FFF;
+    color: #282828;
+    border: 1px solid #E2E2E2;
+}
+
+.dart-btn-secondary-mini:hover {
+    background: rgba(0, 0, 0, 0.03);
+    color: #282828;
+}
+
+.order-product-bonus img {
+    width: 10px;
+}
+
+h3 + *, .h3 + * {
+    margin-top: 8px;
+}
+
+.dart-btn-choice {
+    background: var(--btn-secondary-outline-background);
+    justify-content: space-between;
+
+    p {
+        color: var(--text-color-dop);
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 16px;
+    }
+
+    i {
+        color: var(--secondary-color);
+        font-size: 24px;
+    }
+
+    &:hover {
+        background: var(--btn-secondary-outline-hover);
+    }
+}
+
+.points{
+    background: rgba(0, 0, 0, 0);
+	pointer-events: none;
+	position: fixed;
+	z-index: 25;
+	width: 100%;
+	height: 100dvh;
+	transition: all 0.3s;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &.show{
+		pointer-events: all;
+		background: rgba(0, 0, 0, 0.50);
+		.points__content{
+			transform: translate(0%);
+			right: 0%;
+            opacity: 1;
+            pointer-events: all;
+		}
+	}
+
+    &__content{
+        max-width: 950px;
+        background: #FFF;
+        width: 100%;
+        max-height: calc(100vh - 160px);
+        border-radius: 12px;
+        opacity: 0;
+        pointer-events: none;
+        padding: 32px;
+    }
 }
