--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -377,8 +377,8 @@ a {
 }
 
 .dart-btn-primary-mini {
-  font-size: 14px;
-  padding: 8px 16px;
+  font-size: 14px !important;
+  padding: 8px 16px !important;
   background: var(--primary-color);
   color: var(--white-color);
 }
