--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -7064,6 +7064,8 @@ ul {
       -ms-flex-pack: center;
           justify-content: center;
   z-index: 3;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100vh;
   -webkit-transition: all 0.4s;
@@ -7948,10 +7950,10 @@ ul {
     margin-right: 12px;
   } */
   .dart-header .nav__all-shop i {
-    display: block;
+    display: block !important;
   }
   .dart-header .nav__all-shop span {
-    display: none;
+    display: none !important;
   }
 }
 
@@ -8016,7 +8018,7 @@ ul {
     top: 79px;
   }
   .dart-header__components-desctop {
-    display: none;
+    display: none !important;
   }
   .dart-header__components-mobile {
     display: -webkit-box;
@@ -8088,6 +8090,7 @@ ul {
     width: 100%;
     overflow: unset;
     padding-bottom: 20px;
+    height: auto;
   }
   .dart-order__right {
     width: 100%;
@@ -12982,7 +12985,7 @@ ol.def-section li + li {
     display: inline-flex !important;
   }
   .header-phone {
-    display: none;
+    display: none !important;
   }
   .d-col-content {
     width: calc(100% - 287px);
@@ -13005,7 +13008,7 @@ ol.def-section li + li {
     display: none;
   }
   .nav__all-shop {
-    display: none;
+    display: none !important;
   }
   .header-basket {
     display: none !important;
