--- a/src/assets/mystyle.scss
+++ b/src/assets/mystyle.scss
@@ -456,8 +456,6 @@ hr {
 }
 
 .d-col-basket.loading{
-    position: relative;
-
 
     .dot-loader {
         position: absolute;
@@ -1222,7 +1220,7 @@ h3 + *, .h3 + * {
         border-radius: 12px;
         opacity: 0;
         pointer-events: none;
-        overflow: hidden;
+        // overflow: hidden;
 
         &-scroll{
             overflow-y: auto;
@@ -1266,6 +1264,11 @@ h3 + *, .h3 + * {
         border-radius: 12px;
         opacity: 0;
         pointer-events: none;
+        // overflow: hidden;
+    }
+
+    .map-wrapper{
+        border-radius: 0px 12px 12px 0;
         overflow: hidden;
     }
 }
@@ -1315,7 +1318,7 @@ h3 + *, .h3 + * {
         position: relative;
         background-color: #f2f1f0;
         border-radius: 16px;
-        padding: 12px 36px 12px 16px;
+        padding: 12px 12px 12px 16px;
         position: relative;
         cursor: pointer;
         transition: all 0.3s;
@@ -1332,7 +1335,7 @@ h3 + *, .h3 + * {
     }
 
     &__image{
-        height: 25px !important;
+        height: 22px !important;
     }
     
     // &__best{
@@ -1479,5 +1482,23 @@ h3 + *, .h3 + * {
 
     .address__content{
         margin: 0 16px;
+    }
+}
+
+.kenost-modal-closer{
+    position: absolute;
+    right: -35px;
+    z-index: 1;
+    top: 0;
+    cursor: pointer;
+
+    svg{
+        fill: #FFF;
+        width: 30px;
+        height: 30px;
+        path{
+            fill: #FFF;
+            stroke: #FFF;
+        }
     }
 }
