--- a/src/assets/mystyle.scss
+++ b/src/assets/mystyle.scss
@@ -1172,14 +1172,15 @@ h3 + *, .h3 + * {
 	}
 
     &__content{
-        max-width: 950px;
+        max-width: 1200px;
         background: #FFF;
         width: 100%;
         max-height: calc(100vh - 160px);
         border-radius: 12px;
+
         opacity: 0;
         pointer-events: none;
-        padding: 32px;
+        // padding: 32px;
     }
 }
 
@@ -1379,6 +1380,8 @@ h3 + *, .h3 + * {
 
 .text_address{
     max-width: calc(100% - 32px);
+    text-align: start;
+    line-height: 1.2 !important;
 }
 
 .cursornone{
@@ -1499,6 +1502,231 @@ h3 + *, .h3 + * {
         path{
             fill: #FFF;
             stroke: #FFF;
+        }
+    }
+}
+
+.kenost-points{
+    display: flex;
+    height: 600px;
+
+    &__list{
+        width: 100%;
+        padding: 32px;
+
+        .h1-mini{
+            font-size: 21px;
+        }
+    }
+}
+
+.kenost-map{
+    width: 100%;
+    border-radius: 0 12px 12px 0;
+    overflow: hidden;
+}
+
+.map-item + .map-item{
+    margin-top: 24px;
+}
+
+.kenost-points__list-points{
+    overflow-y: auto;
+    max-height: calc(600px - 105px);
+}
+
+.map-item{
+    background: #F7F7F7;
+    padding: 8px 16px;
+    border-radius: 8px;
+
+    &__title{
+        display: flex;
+        gap: 8px;
+        font-weight: 500;
+        font-size: 16px;
+        align-items: center;
+        margin-bottom: 8px;
+    }
+
+    &__image{
+        width: 25px;
+        height: 25px !important;
+        background: #FFF;
+        border-radius: 100%;
+        object-fit: contain;
+    }
+
+    &__address{
+        display: flex;
+        gap: 4px;
+        align-items: flex-start
+    }
+
+    &__info{
+        background: #797979;
+        padding: 4px 8px;
+        width: fit-content;
+        border-radius: 22px;
+        margin-top: 4px;
+        color: #FFFFFF;
+        font-size: 14px;
+        line-height: 100%;
+
+        span{
+            font-weight: 500;
+        }
+    }
+
+    &__address-full{
+        width: calc(100% - 22px);
+    }
+
+    &__bottom{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        margin-top: 12px;
+        border-top: 0.5px solid #28282850;
+        padding-top: 12px;
+    }
+}
+
+.w-fit{
+    width: fit-content !important;
+}
+
+@media (max-width: 1536px) {
+    .points__content{
+        width: 1136px;
+    }
+}
+
+@media (max-width: 1280px) {
+    .points__content{
+        width: 880px;
+    }
+
+    .kenost-points__list{
+        padding: 32px 16px;
+    }
+
+    // .kenost-points__list .h1-mini {
+    //     margin-bottom: 12px;
+    // }
+}
+
+@media (max-width: 1024px) {
+    .points__content{
+        width: 752px;
+    }
+
+    .map-item__bottom {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-between;
+        gap: 8px;
+    }
+}
+
+@media (max-width: 800px) {
+    .points__content{
+        width: 90vw;
+        max-width: calc(100vw - 70px);
+    }
+
+    .kenost-map{
+        border-radius: 12px;
+    }
+
+    .kenost-points__list{
+        display: none;
+    }
+}
+
+.kenost-basket-product{
+    background: #F7F7F7;
+    padding: 12px 8px;
+    border-radius: 4px;
+
+    &__org{
+        display: flex;
+        align-items: center;
+        gap: 8px;
+    }
+
+    &__img{
+        width: 18px;
+        height: 18px !important;
+        object-fit: contain;
+        background: #FFF;
+        border-radius: 50%;
+    }
+
+    &__store{
+        display: flex;
+        align-items: center;
+        gap: 4px;
+        margin-top: 12px;
+
+        span{
+            color: #797979;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 18px;
+        }
+    }
+
+    &__product{
+        margin-top: 16px;
+        display: flex;
+        gap: 8px;
+
+        &-image{
+            width: 50px;
+            img{
+                width: 100%;
+                background: #FFF;
+            }
+        }
+
+        &-info{
+            display: flex;
+            justify-content: space-between;
+            width: calc(100% - 48px);
+
+            svg{
+                cursor: pointer;
+            }
+
+            &-data{
+                width: calc(100% - 24px);
+                b{
+                    font-size: 15px;
+                    font-weight: 600;
+                    color: #282828;
+                    line-height: 1;
+                }
+
+                p{
+                    color: #282828;
+                    font-weight: 500;
+                    font-size: 14px;
+                    line-height: 1;
+                    margin-top: 2px;
+                    opacity: 40%;
+                }
+                
+                span{
+                    color: #282828;
+                    font-weight: 500;
+                    font-size: 14px;
+                    line-height: 1;
+                    margin-top: 2px;
+                    opacity: 40%;
+                }
+            }
         }
     }
 }
