--- a/src/assets/mystyle.scss
+++ b/src/assets/mystyle.scss
@@ -1818,3 +1818,31 @@ h3 + *, .h3 + * {
         font-size: 14px;
     }
 }
+
+.kenost-shop-mini{
+    text-transform: uppercase;
+    font-size: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #50C0E6;
+    color: #FFF;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    line-height: 100%;
+}
+
+.kenost-shop-image{
+    text-transform: uppercase;
+    font-size: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #50C0E6;
+    color: #FFF;
+    width: 100%;
+    height: 100% !important;
+    border-radius: 50%;
+    line-height: 100%;
+}
