--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -8472,7 +8472,7 @@ ul {
   }
   .dart-modal__content {
     width: 100%;
-    max-height: 100%;
+    max-height: 550px;
     height: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
